# DrugRepurposing_GDL

./: .gitignore  README.md  ablation.py  config.py  data_loader.py  evaluate.py  generacion_figura.py  main.py  main_roto.py  pyproject.toml  requirements.txt  train.py  train_roto.py  utils.py
models/: __init__.py  decoders.py  encoders.py  encoders_roto.py  full_model.py  structure_explanation.txt
results/ablation/ablation_20260416_000130/: ablation_analysis.txt  ablation_results_copy.json
results/ablation/ablation_20260416_000130/checkpoints/: best_model_rgcn_distmult.pt
results/ablation/ablation_20260428_095827/: ablation_analysis.txt  ablation_results_copy.json
results/ablation/ablation_20260428_114647/: ablation_analysis.txt  ablation_results_copy.json
