[project]
name = "drugrepurposing-gdl"
version = "0.1.0"
description = "Drug repurposing using Graph Neural Networks with GDL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.1",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]
